--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "license": "Zlib",
   "type": "tool",
+  "changelogUrl": "https://github.com/Narazaka/QuizSystem#changelog",
   "url" : "https://github.com/Narazaka/QuizSystem.git",
   "unity": "2022.3",
   "vpmDependencies": {
